--- a/conf.yaml
+++ b/conf.yaml
@@ -66,7 +66,7 @@ character_config:
         llm:
           provider: "ollama"
           config:
-            model: "qwen2.5:latest"
+            model: "llama3.1:latest"
             temperature: 0
             max_tokens: 8000
             ollama_base_url: "http://localhost:11434"
