--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,11 +11,16 @@ dependencies = [
     "edge-tts>=7.0.0",
     "fastapi>=0.115.6",
     "faster-whisper>=1.1.0",
+    "funasr>=1.2.3",
     "groq>=0.13.0",
     "httpx>=0.28.1",
+    "huggingface-hub>=0.27.1",
     "langdetect>=1.0.9",
     "loguru>=0.7.2",
+    "modelscope>=1.22.3",
     "numpy>=1.26.4",
+    "onnx>=1.17.0",
+    "onnxconverter-common>=1.14.0",
     "onnxruntime>=1.20.1",
     "openai>=1.57.4",
     "pydub>=0.25.1",
@@ -28,6 +33,8 @@ dependencies = [
     "sherpa-onnx>=1.10.39",
     "soundfile>=0.12.1",
     "tomli>=2.2.1",
+    "torch>=2.6.0",
+    "torchaudio>=2.6.0",
     "tqdm>=4.67.1",
     "uvicorn[standard]>=0.33.0",
     "websocket-client>=1.8.0",
